--- a/LRU_Cache/02.LFU_Cache.md
+++ b/LRU_Cache/02.LFU_Cache.md
@@ -18,7 +18,7 @@ The functions `get` and `put` must each run in `O(1)` average time complexity.
 
 ### Solution
 
-The LFU is more complicated than the LRU. It requires to evict element LFU and then LRU for  elements with the same frequency.  The intial thought is modify based on our LRU implementation. we can add an additional field frequency in our ListNode object. We cannot directly move the recently used node to the front of the LinkedList but we need to move it to the front of ListNodes with the same frequency. The following is implementation for this idea.
+The LFU is more complicated than the LRU. It requires evicting element LFU and then LRU for  elements with the same frequency.  The initial thought is to modify based on our LRU implementation. we can add a field frequency in our ListNode object. We cannot directly move the recently used node to the front of the LinkedList but we need to move it to the front of ListNodes with the same frequency. The following is implementation for this idea.
 
 ```java
 class LFUCache {
@@ -80,7 +80,7 @@ class LFUCache {
     }
     
     private void moveByFreq(ListNode node) {
-        // sentinel node with freq == -1 and the we should keep current position if the previous node frequency
+        // sentinel node with freq == -1 and we should keep current position if the previous node frequency
         // is greater than the current
         if (node.pre.freq < 0 || node.pre.freq > node.freq ) {
             return;
@@ -121,7 +121,7 @@ Time complexity: get put O(n)
 
 Space compelxity: O(capacity)
 
-Appreantly, this is not satisfy the requirement. We need get and put in O(1) on average. How can we improve the perfromance. First, for each frequency, the list should be maintained as LRU and we need to locate that list by its frequency in O(1) time. So we can divide the the whole list into multiple small list.  Each List is LRU cache and the key in map is the frequency. But that would be O(n) for lookup by key for get(key) and put(key,value) because we need to iterate all to find the ListNode. So we still need the old map to lookup ListNode in O(1) time.  So we need two maps. For to store list in segements for eviction and one for lookup a node. For the first map, we can store ListNode directly. But it may be better to wrap it as a class. In that case, we can have some custom methods.  Another thing is that the frequency would be increase one by one. That means, 1 must be 2 before become 3 or larger. This gives us the ability to track min frequency but adding 1 when the last node of current frequency is promoted (because there is no delete API exposed).
+Apparently, this is not satisfy the requirement. We need get and put in O(1) on average. How can we improve the performance. First, for each frequency, the list should be maintained as LRU and we need to locate that list by its frequency in O(1) time. So we can divide the whole list into multiple small list.  Each List is LRU cache and the key in map is the frequency. But that would be O(n) for lookup by key for get(key) and put(key,value) because we need to iterate all to find the ListNode. So we still need the old map to lookup ListNode in O(1) time.  So we need two maps. For to store list in segments for eviction and one for lookup a node. For the first map, we can store ListNode directly. But it may be better to wrap it as a class. In that case, we can have some custom methods.  Another thing is that the frequency would be increase one by one. That means, 1 must be 2 before become 3 or larger. This gives us the ability to track min frequency but adding 1 when the last node of current frequency is promoted (because there is no delete API exposed).
 
 ```java
 class LFUCache {
@@ -133,7 +133,7 @@ class LFUCache {
     // track the least frequency
     private int min;
     public LFUCache(int capacity) {
-        // intialize the maps
+        // initialize the maps
         map = new HashMap<>(capacity);
         dListMap = new HashMap<>(capacity);
         this.capacity = capacity;
