--- a/Search_Technique/Bidirectional_Search/01.Minimum_Genetic_Mutation__Word_Ladder.md
+++ b/Search_Technique/Bidirectional_Search/01.Minimum_Genetic_Mutation__Word_Ladder.md
@@ -76,7 +76,7 @@ The analysis is the same as previous. We just apply the bidirectional search tec
 
 Time complexity and Space complexity are the same as before. The worst case is the end cannot be transformed. That gives the same worst case as the single bidirectional search.
 
-Actually, for this particular problem, bidirectional BFS may not improve the performance. That is because the length of String is only 8 and the bank owns no more than 10 elements. The size is too small and the we also sacrifice Queue\<String\> for LinkedHashSet<> to support iteration and O(1) lookup. That pays a prices during add. For small data set, that becomes overhead cannot be ignored.
+Actually, for this particular problem, bidirectional BFS may not improve the performance. That is because the length of String is only 8 and the bank owns no more than 10 elements. The size is too small and we also substitute Queue<String> for LinkedHashSet<> to support iteration and O(1) lookup. That pays a prices during add. For small data set, that becomes overhead cannot be ignored.
 
 ## Word Ladder
 
