--- a/Search_Technique/Heuristic_Search/01.Shortest_Path_in_Binary_Matrix.md
+++ b/Search_Technique/Heuristic_Search/01.Shortest_Path_in_Binary_Matrix.md
@@ -13,7 +13,7 @@ The **length of a clear path** is the number of visited cells of this path.
 
 ### Solution
 
-This is problem is searching shortest path with with universal weight. BFS would be good choice. Here need record if an entry is visited or not. We can track the entry by the row and col as an int array. But in java, the hash code of int array is not related to its value. So we cannot use Set and int array together. One can implement a dedicated class to present the cell and provide hash code and equal function. Or, we can use boolean array/ matrix to indicate if an entry is visited.
+This is problem is searching the shortest path with universal weight. BFS would be good choice. Here need record if an entry is visited or not. We can track the entry by the row and col as an int array. But in java, the hash code of int array is not related to its value. So we cannot use Set and int array together. One can implement a dedicated class to present the cell and provide hash code and equal function. Or, we can use boolean array/ matrix to indicate if an entry is visited.
 
 ```java
     private final int[][] DIRS = {{0, -1}, {1, -1}, {1, 0}, {1, 1}, {0, 1}, {-1, 1}, {-1, 0}, {-1, -1}};
@@ -151,7 +151,7 @@ We can also try bidirectional search. However, we have to provide customize clas
 }
 ```
 
-A* algorithm. To apply the A* algorithm, we need the priority Queue and keep track the cell info such as row, col, distance and distance + heuristic function. In A* algorithm, the heuristic function should be admissible. The Manhattan distance (The sum of the absolute difference between x's and that between y's, i.e. |x1 - x2| + |y1 - y2|) . But it is not working here.  The distance between the starting point and the destination is at most N + N. The shortest possible path is N, i.e. walking through the diagonal. That is too large to be ignore. So we choose the max of the difference between individual coordinate. Math.max(x~d~ - x~1~, y~d~ - y~1~). There is no need for Math.max(|x~d~ - x~1~|,|y~d~ - y~1~|) because x~d~ >= x~1~ and y~d~ >= y~1~.
+A* algorithm. To apply the A* algorithm, we need the priority Queue and keep track the cell info such as row, col, distance and distance + heuristic function. In A* algorithm, the heuristic function should be admissible. The Manhattan distance (The sum of the absolute difference between x's and that between y's, i.e. |x<sub>1</sub> - x<sub>2</sub>| + |y<sub>1</sub> - y<sub>2</sub>|) . But it is not working here.  The distance between the starting point and the destination is at most N + N. The shortest possible path is N, i.e. walking through the diagonal. That is too large to be ignored. So we choose the max of the difference between individual coordinate. Math.max(x<sub>d</sub> - x<sub>1</sub>, y<sub>d</sub> - y<sub>1</sub>). There is no need for Math.max(|x<sub>d</sub> - x<sub>1</sub>|,|y<sub>d</sub> - y<sub>1</sub>|) because x<sub>d</sub> >= x<sub>1</sub> and y<sub>d</sub> >= y<sub>1</sub>.
 
 ```java
     private final int[][] DIRS = {{0, -1}, {1, -1}, {1, 0}, {1, 1}, {0, 1}, {-1, 1}, {-1, 0}, {-1, -1}};
