--- a/Search_Technique/Pruning/01.Generate_Parentheses.md
+++ b/Search_Technique/Pruning/01.Generate_Parentheses.md
@@ -49,7 +49,7 @@ The BF solution would generate all possible parentheses and check their validity
     }
 ```
 
-Time complexity : Every position would be 2 choice for 2n entry and we need to valid the string n. O(2^2n^n)
+Time complexity : Every position would be 2 choice for 2n entry and we need to valid the string n. O(2<sup>2n</sup>n)
 
 Space complexity: the max recursion depth would 2n and the char array is also 2n O(n)
 
