--- a/Search_Technique/Pruning/02.Sudoku.md
+++ b/Search_Technique/Pruning/02.Sudoku.md
@@ -74,7 +74,7 @@ The description is the same as "Valid Sudoku". The '.' is undecided entry. We wo
 
 The Brute Force solution would try all possible solutions with backtrack and check if the solution is valid with the "Valid Sudoku". But that in the worst case would (9^9) ^9. We need to prune the redundant work. For example, if you already have a "1" in the row, you should not try to fill "1" in this row again. It is similar to columns and blocks. So we can try to limit the operations to try during the search instead of checking at the end.
 
-First we can record what the problem already have specified. But make change in rows, cols and blocks array once a digit is met. Then we can start explore. For each options, i.e1- 9. We first check if there is any conflict. If no, we can record it in those three arrays as well. Then we can explore the next entry. If that success to fill all the entries, we get the answer. Otherwise, that means we should try another option. But please remember that we should restore all the status: rows, cols, blocks and '.' in the board so that we do not interfere with other paths.
+First we can record what the problem already have specified. But make change in rows, cols and blocks array once a digit is met. Then we can start explore. For each option, i.e. 1- 9, we first check if there is any conflict. If no, we can record it in those three arrays as well. Then we can explore the next entry. If that success to fill all the entries, we get the answer. Otherwise, that means we should try another option. But please remember that we should restore all the status: rows, cols, blocks and '.' in the board so that we do not interfere with other paths.
 
 We need a way to tell if all entries are filled legally. Hence, we would return a Boolean to indicate if a valid solution is found. 
 
