--- a/Search_Technique/Pruning/03.Max_Value_of_Equation.md
+++ b/Search_Technique/Pruning/03.Max_Value_of_Equation.md
@@ -12,7 +12,7 @@ It is guaranteed that there exists at least one pair of points that satisfy the 
 
 #### Brute Force
 
-We can just following the instructions in the problem. A BF solution would be straightforward.
+We can just follow the instructions in the problem. A BF solution would be straightforward.
 
 ```java
     public int findMaxValueOfEquation(int[][] points, int k) {
@@ -29,7 +29,7 @@ We can just following the instructions in the problem. A BF solution would be st
     }
 ```
 
-Time complexity: nested loop O(n^2^)
+Time complexity: nested loop O(n<sup>2</sup>)
 
 Space complexity: O(1)
 
@@ -52,7 +52,7 @@ public int findMaxValueOfEquation(int[][] points, int k) {
 
 Or we can keep the large one in the outer loop.
 
-Let's revisit the `yi + yj + |xi - xj|`. with the sorted condition. It would be `yi + yj + xj - xi` . And we only take care of xj - xi <= k.  Because we only concern the xj - xi <= k and the array is sorted. Once xj - xi > k. xi will be no longer be used in the future computation. This reminds me sliding window. Let us arrange the  equation `yj + xj + yi - xi`  for i < j. With sliding window, we can fix one group,  (yj + xj) or (yi - xi), and search for another. If we fix the small index group, i.e. i. We need to check the element on its right side. It would be better traverse from back because that would be only one element to consider. All the larger elements are already pushed in the sliding window. And if we fix the large index group, i.e. j. We can iterate from the beginning to reduce the element to be considered each time. Of course, we need to remove xj - xi > k in the window.  By far the question is more similar to [Sliding Window Maximum](..\..\Stack_Queue_PriorityQueue_Deque\02.Deque.md) problem. We can use the mono-decreasing deque to get the max value for O(1).
+Let's revisit the `yi + yj + |xi - xj|`. with the sorted condition. It would be `yi + yj + xj - xi` . And we only take care of xj - xi <= k.  Because we only concern the xj - xi <= k and the array is sorted. Once xj - xi > k. xi will be no longer be used in the future computation. This reminds me sliding-window. Let us arrange the  equation `yj + xj + yi - xi`  for i < j. With sliding window, we can fix one group,  (yj + xj) or (yi - xi), and search for another. If we fix the small index group, i.e. i. We need to check the element on its right side. It would be better traverse from back because that would be only one element to consider. All the larger elements are already pushed in the sliding window. And if we fix the large index group, i.e. j. We can iterate from the beginning to reduce the element to be considered each time. Of course, we need to remove xj - xi > k in the window.  By far the question is more similar to [Sliding Window Maximum](..\..\Stack_Queue_PriorityQueue_Deque\02.Deque.md) problem. We can use the mono-decreasing deque to get the max value for O(1).
 
 ```java
     public int findMaxValueOfEquation(int[][] points, int k) {
