--- a/Sorting/05.Smallest_K.md
+++ b/Sorting/05.Smallest_K.md
@@ -63,7 +63,7 @@ To find an X-percentile in an array is a classic question as well. Like this que
     }
 ```
 
-Time complexity: O(n^2) in the worst case but O(n) in0-average
+Time complexity: O(n<sup>2</sup>) in the worst case but O(n) in0-average
 
 Space complexity: O(1)
 
@@ -148,3 +148,5 @@ How about large dataset cannot be processed by one machine. We can try the Merge
 Time complexity: O(klogn) the depth is logn and in each merge we need iterate k times.
 
 Space complexity: O(k)
+
+Note, for distributed data. Merge sort is one approach. The other is to sort the data in small chunk and put the smallest value of each chunk in the heap. Get the smallest value of those values and add the second smallest value from the chunk where the smallest one is picked. Repeat this until k elements are found. 
