--- a/String/00.String.md
+++ b/String/00.String.md
@@ -1,6 +1,6 @@
 # String
 
-In python, Java, Go, JavaScript, C#, String is immutable but it is not in C++, Ruby,php and swift.
+In python, Java, Go, JavaScript, C#, String is immutable, but it is not in C++, Ruby,php and swift.
 
 Iterate over String
 
