--- a/String/01.Basic_String_Operations.md
+++ b/String/01.Basic_String_Operations.md
@@ -121,11 +121,11 @@ Space Complexity: O(n)
 
 [Link](https://leetcode.com/problems/string-to-integer-atoi/)
 
-Implementing atoi for integer simlar to C/C++ atoi functions.
+Implementing atoi for integer similar to C/C++ atoi functions.
 
 1. Read in and ignore any leading whitespace.
 2. Check if the next character (if not already at the end of the string) is `'-'` or `'+'`. Read this character in if it is either. This determines if the final result is negative or positive respectively. Assume the result is positive if neither is present.
-3. Read in next the characters until the next non-digit charcter or the end of the input is reached. The rest of the string is ignored.
+3. Read in next the characters until the next non-digit character or the end of the input is reached. The rest of the string is ignored.
 4. Convert these digits into an integer (i.e. `"123" -> 123`, `"0032" -> 32`). If no digits were read, then the integer is `0`. Change the sign as necessary (from step 2).
 5. If the integer is out of the 32-bit signed integer range `[-231, 231 - 1]`, then clamp the integer so that it remains in the range. Specifically, integers less than `-231` should be clamped to `-231`, and integers greater than `231 - 1` should be clamped to `231 - 1`.
 6. Return the integer as the final result.
@@ -181,7 +181,7 @@ Time complexity: O(n)
 
 Space: O(n)
 
-Note: The above is implemented with if-else. Another way is to implemented this as a finite state machine. 
+Note: The above is implemented with if-else. Another way is to implement this as a finite state machine. 
 
 ### Isomorphic Strings
 
@@ -191,7 +191,7 @@ Two strings are isomorphic if the characters in one can be replaced to get anoth
 
 Analysis
 
-A common idea is to have a map to record mapping relation ship. It may be helpful to have two maps because we are not able to check if two characters are mapped to the same character in one run. E.g "foo" -> "bar" and "bar" -> "foo". If we record mapping from source to target, bar  -> foo would not tell if a->0 and r ->o. Similarly, if we record mapping from target to source, foo -bar would not tell o->a and o -> r. For a single map to work, you might need two rounds and clear map after the first round. For one round, it is possible to have either two maps or a map and a set. Both combination would check mapping in both directions.
+A common idea is to have a map to record mapping relationship. It may be helpful to have two maps because we are not able to check if two characters are mapped to the same character in one run. E.g "foo" -> "bar" and "bar" -> "foo". If we record mapping from source to target, bar  -> foo would not tell if a->0 and r ->o. Similarly, if we record mapping from target to source, foo -bar would not tell o->a and o -> r. For a single map to work, you might need two rounds and clear map after the first round. For one round, it is possible to have either two maps or a map and a set. Both combination would check mapping in both directions.
 
 Two maps: check mapping from both sides
 
