--- a/String/03.Anagram.md
+++ b/String/03.Anagram.md
@@ -11,7 +11,7 @@ check if two strings are anagram. Those strings only contains lowercase English 
 1. sort and compare
 2. count character frequency and compare
    1. Compare two counts
-   2. Count one string and substract counts from another to see if only zero left
+   2. Count one string and subtract counts from another to see if only zero left
 
 ```java
     public boolean isAnagram(String s, String t) {
@@ -36,7 +36,7 @@ check if two strings are anagram. Those strings only contains lowercase English 
 
 Time complexity: O(n)
 
-Space complexity: O(n)( O(1) If use string::charAt int[26] is constant) 
+Space complexity: O(n)( O(1) for use string::charAt int[26] is constant) 
 
 #### Follow up
 
@@ -129,7 +129,7 @@ We need to check all intervals in s which length is equal to p.
 
 This can be resolved by Brute Force but when calculate [0, p.length()) and [1,p.length()+1) The interval of [1, p.length() - 1] is common and duplicated in two checks.
 
-Clearly a sliding window would dramatically reduces the work. From [0,p.length()) to [1,p.length()+1), it only requires remove the 0th character and add the p.length()th character. This reduce O(n^2) to O(n).
+Clearly a sliding window would dramatically reduce the work. From [0,p.length()) to [1,p.length()+1), it only requires remove the 0th character and add the p.length()th character. This reduces O(n<sup>2</sup>) to O(n).
 
 The Sliding window remind me the Rabin-Karp algorithm. Clearly the rolling hash does not work here because anagrams does not require the same order. However, we can have a matched count similar to the rolling hash. It is only worth to check if the match count in sliding windows is equal to the pattern length.
 
@@ -178,4 +178,4 @@ The Sliding window remind me the Rabin-Karp algorithm. Clearly the rolling hash 
 
 Time complexity : iterate over string. O(n) (the two count array is with fixed length 26. checking fixed length array -> O(1))
 
-Space Complexity: O(n) or O(i) if use string::charAt
+Space Complexity: O(n) or O(i) for string::charAt
