--- a/String/04.Palindrome.md
+++ b/String/04.Palindrome.md
@@ -6,11 +6,11 @@ A **palindrome** is a word, [number](https://en.wikipedia.org/wiki/Palindromic_n
 
 [Link](https://leetcode.com/problems/valid-palindrome)
 
-Check if a string is a palindrome. Only alphanumeric characters should be considered. Others should be ingored (they should not affect the result). Note: the lowercase and uppercase are considered as the same character
+Check if a string is a palindrome. Only alphanumeric characters should be considered. Others should be ignored (they should not affect the result). Note: the lowercase and uppercase are considered as the same character
 
 Two pointer
 
-check if the front pointer equals the end pointer. If the character is not alphanumeric, the pointer should move to a valid character before comparision.
+check if the front pointer equals the end pointer. If the character is not alphanumeric, the pointer should move to a valid character before comparison.
 
 ```java
     public boolean isPalindrome(String s) {
@@ -39,7 +39,7 @@ check if the front pointer equals the end pointer. If the character is not alpha
 
 Time complexity: iterate over string O(n)
 
-Space complexity: O(n)( O(1) If use string::charAt int[26] is constant) 
+Space complexity: O(n)( O(1) for string::charAt int[26] is constant) 
 
 ### Valid Palindrome II
 
@@ -47,7 +47,7 @@ Space complexity: O(n)( O(1) If use string::charAt int[26] is constant)
 
 Check if  a string is palindrome by deleting at most one character. The string only contains lowercase English characters.
 
-Two pointer. check until a invalid case. Try to delete the left character or the right character.
+Two pointer. check until an invalid case. Try to delete the left character or the right character.
 
 ```java
     public boolean validPalindrome(String s) {
