--- a/String/05.String_And_DP.md
+++ b/String/05.String_And_DP.md
@@ -61,9 +61,9 @@ It is similar to [Palindromic_Substrings](../DP/13.Palindromic_Substrings.md). I
     }
 ```
 
-Time complexity : O(n^2) 
+Time complexity : O(n<sup>2</sup>) 
 
-Space Complexity:  O(n^2).
+Space Complexity:  O(n<sup>2</sup>).
 
 #### Greedy
 
@@ -98,7 +98,7 @@ Space Complexity:  O(n^2).
     }
 ```
 
-Time complexity : O(n^2)  (It would much better on average)
+Time complexity : O(n<sup>2</sup>)  (It would much better on average)
 
 Space complexity: O(n) or O(1) if replaces chars[i] with s.charAt(i).
 
