--- a/String/06.Regular_Expression_And_Wildcard_Matching.md
+++ b/String/06.Regular_Expression_And_Wildcard_Matching.md
@@ -49,7 +49,7 @@ public boolean isEqual(char[] s, int idxS, char[] p, int idxP) {
 1. regardless whether the preceding element matches, zero match should be an option e.g. abac and a*abac. 
 2. if the preceding element is matched, it should check if zero or more matches next character.
 
-With '*' idxS in at the end but idxP is not may still be valid. ab and abc\* because this can be zero occurence. So idxP == p.length || idxS == s.length() should be modified. 
+With '*' idxS in at the end but idxP is not may still be valid. ab and abc\* because this can be zero occurrence. So idxP == p.length || idxS == s.length() should be modified. 
 
 ```java
 public boolean isMatch(String s, String p) {
@@ -93,9 +93,9 @@ public boolean isMatch(char[] s, int idxS, char[] p, int idxP) {
 }
 ```
 
-Time complexity: T(n,m) = T(n,m+2) + T(n+1,m) ->O(2^k),  where k is max of n and m
+Time complexity: T(n,m) = T(n,m+2) + T(n+1,m) ->O(2<sup>k</sup>),  where k is max of n and m
 
-Space compelxity: The deepest recursive call should be the length of the string O(k)
+Space complexity: The deepest recursive call should be the length of the string O(k)
 
 #### DP
 
@@ -185,7 +185,7 @@ Space compelxity: The deepest recursive call should be the length of the string 
 
    2. Guessing: Is s[i:] and p[j:] match. depend on if s[i] and p[j] matches and if p[j] is '.' and p[j+1] is '*'
 
-   3. Replace mem[i]\[j] to dp[i]\[j]. isMatch(str,i,pat,j) to dp[i]\[j].  
+   3. Replace mem[i][j] to dp[i][j]. isMatch(str,i,pat,j) to dp[i][j].  
 
       ```java
       boolean check = idxS < str.length && (str[idxS] == pat[idxP] || pat[idxP] == '.');
@@ -197,7 +197,7 @@ Space compelxity: The deepest recursive call should be the length of the string 
       }
       ```
 
-   4. topological order: Becuase dp[i]\[j] rely on dp[i]\[j+2], dp[i+1]\[j] and dp[i+1]\[j+1], iterate backward.
+   4. topological order: because dp[i][j] rely on dp[i][j+2], dp[i+1][j] and dp[i+1][j+1], iterate backward.
       
    5. original problem dp[0]\[0] i.e. s[0:] and p[0:]
          ```java
@@ -206,7 +206,7 @@ Space compelxity: The deepest recursive call should be the length of the string 
               dp[s.length()][p.length()] = true;
               char[] str = s.toCharArray();
               char[] pat = p.toCharArray();
-              //iterater from str.length to find out empty matches i.e str -> ab  pat -> abc*.
+              //iterate from str.length to find out empty matches i.e str -> ab  pat -> abc*.
               //find out c* match empty string
               for (int i = str.length; i >= 0; --i) {
                   //no need to check empty pattern that must be false if str is not empty
@@ -227,7 +227,7 @@ Space compelxity: The deepest recursive call should be the length of the string 
       
       Space complexity: dp array O(nm)
       
-      Because  dp[i]\[j] only depends on dp[i]\[j+2], dp[i+1]\[j] and dp[i+1]\[j+1], reduce space complexity to O(m). save dp[i+1]\[j+1] with a variable.
+      Because  dp[i][j] only depends on dp[i][j+2], dp[i+1][j] and dp[i+1][j+1], reduce space complexity to O(m). save dp[i+1][j+1] with a variable.
       
       ```java
           public boolean isMatch(String s, String p) {
@@ -300,7 +300,7 @@ public boolean isMatch(String s, String p) {
     }
 ```
 
-Time complexity:  O(2^n)
+Time complexity:  O(2<sup>n</sup>)
 
 Space complexity: O(n)
 
@@ -311,7 +311,7 @@ Note: idxS < str.length && isMatch(str,idxS+1,pat,idxP, mem) this is counterpart
 Similarly, the above Brute force would cause a lot of duplicated work. when '*' in the pattern. Dynamic programing would help here.
 
 1. Memorization
-   The analyze is the same as the last question
+   The analysis is the same as the last question
 
    ```java
        public boolean isMatch(String s, String p) {
