--- a/Tree/00. Introduction.md
+++ b/Tree/00. Introduction.md
@@ -6,7 +6,7 @@
 
 A **tree** is a widely used abstract data type that simulates a hierarchical tree structure, with a root value and subtrees of children with a parent node, represented as a set of linked nodes.
 
-* Tree only has one root and it is a connected acyclic undirected graph.
+* Tree only has one root. And it is a connected acyclic undirected graph.
 
 * Linked List is a kind of tree
 * Tree is a subset of graph
@@ -40,5 +40,5 @@ A binary search tree, also called an ordered or sorted binary tree, is a rooted 
  Tree Questions can usually be solved by recursion.
 
 * The definition of Tree is recursion
-* The trait of subtree follows the trait of the original tree. e.g BST, all left nodes are less than the root and all the right nodes are greater than the root.
+* The trait of subtree follows the trait of the original tree. e.g. BST, all left nodes are less than the root and all the right nodes are greater than the root.
 
