--- a/Tree/01.Traverse_Tree.md
+++ b/Tree/01.Traverse_Tree.md
@@ -48,7 +48,7 @@ class Solution {
 
 Space complexity: O(1) in each recursive call the worse case is a linked list  and the depth is n -> O(n)
 
-The question has a follow up question. That is to solve this question without recursion. The recursion is a kind of stack managed by the language. So we can use stack to simulate the recursive calls. Note in the recursive call, when the TreeNode is null, it would return and its parent, if any, in previous call would be added to the list. Then the right child would be push to the recursive call. In each recursive call, the left child would be pushed to the stack first.  So we would keep both stack and a variable of tree node to mimic the recursive call and the status.
+The question has a follow-up question. That is to solve this question without recursion. The recursion is a kind of stack managed by the language. So we can use stack to simulate the recursive calls. Note in the recursive call, when the TreeNode is null, it would return and its parent, if any, in previous call would be added to the list. Then the right child would be push to the recursive call. In each recursive call, the left child would be pushed to the stack first.  So we would keep both stack and a variable of tree node to mimic the recursive call and the status.
 
 ```java
     public List<Integer> inorderTraversal(TreeNode root) {
@@ -73,7 +73,7 @@ Time complexity and space complexity are the same.
 
 #### Notes
 
-For binary search tree, the in-order traversal is mono-increasing. This is not hard to be proved by bst definitions. In any subtree, the left node and all its descendants are less than the root. The right node and all its descendants are greater than the root. This is true for all subtrees, including the original tree. Hence it is mono-increasing.  This conclusion is very helpful to verify its a binary tree is binary search tree.
+For binary search tree, the in-order traversal is mono-increasing. This is not hard to be proved by bst definitions. In any subtree, the left node and all its descendants are less than the root. The right node and all its descendants are greater than the root. This is true for all subtrees, including the original tree. Hence, it is mono-increasing.  This conclusion is very helpful to verify its a binary tree is binary search tree.
 
 ### Binary Tree Pre-order Traversal
 
@@ -105,7 +105,7 @@ Time complexity: traverse all nodes once -> O (n)
 
 Space complexity: O(1) in each recursive call the worse case is a linked list  and the depth is n -> O(n)
 
-Again the follow up question is the resolve this without recursion. Again we can mimic the recursive call with a stack. 1. when a tree node is null, we go back the previous recursive call and recursively calls its right sibling. 2. each node is added to the result before recursively calls its left node.  Like the in-order traversal, we can use a stack and a tree node to solve it. 
+Again the follow-up question is the resolve this without recursion. Again we can mimic the recursive call with a stack. 1. when a tree node is null, we go back the previous recursive call and recursively calls its right sibling. 2. each node is added to the result before recursively calls its left node.  Like the in-order traversal, we can use a stack and a tree node to solve it. 
 
 ```java
     public List<Integer> preorderTraversal(TreeNode root) {
@@ -160,7 +160,7 @@ Time complexity and Space complexity are the same to pre- and in- traversal.
 
 Similarly, the follow-up question is to resolve it without recursion. 
 
-The major difference from the previous binary traversal questions is the the parent or root is the last to be added in the list. When reach the last node in the left subtree, the right child should be traversed first. And when the last node of the right subtree is traversed, the root or parent should be visited. We need to find a way to mark if a right node or the parent is popped from the stack. Failing to make difference of them may lead to infinite loop. That is because we need to traverse all the left subtree of the right child but we should not repeat the left subtree for the parent or root. One way to do it is the following, we just add the parent twice in stack and if the top of the stack is the same of the popped, we should go to the right subtree. Otherwise, we only need to add the cur value to the list because both subtree are already traversed.
+The major difference from the previous binary traversal questions is the parent or the root is the last to be added in the list. When reach the last node in the left subtree, the right child should be traversed first. And when the last node of the right subtree is traversed, the root or parent should be visited. We need to find a way to mark if a right node or the parent is popped from the stack. Failing to make difference of them may lead to infinite loop. That is because we need to traverse all the left subtree of the right child, but we should not repeat the left subtree for the parent or root. One way to do it is the following, we just add the parent twice in stack and if the top of the stack is the same of the popped, we should go to the right subtree. Otherwise, we only need to add the cur value to the list because both subtree are already traversed.
 
 ```java
     public List<Integer> postorderTraversal(TreeNode root) {
@@ -191,7 +191,7 @@ The major difference from the previous binary traversal questions is the the par
 
 Time complexity and Space complexity does not change
 
-Of course, one can just add the parent once. And we can push the right child to the stack after the left subtree being visited. This would be more similar to the recursive version.  After all, peek method in the stack would give the value without remove the node. How do we know if the right subtree has been visited? The last popped node can be recorded. After visiting the right subtree, the right child of the parent would be either null or the last popped node. Although the left node would be recorded as well but it has been visited and when the right subtree encounter null, the node would be updated. 
+Of course, one can just add the parent once. And we can push the right child to the stack after the left subtree being visited. This would be more similar to the recursive version.  After all, peek method in the stack would give the value without remove the node. How do we know if the right subtree has been visited? The last popped node can be recorded. After visiting the right subtree, the right child of the parent would be either null or the last popped node. Although the left node would be recorded as well, but it has been visited and when the right subtree encounter null, the node would be updated. 
 
 ```java
     public List<Integer> postorderTraversal(TreeNode root) {
