--- a/Trie/01.Implement_Trie.md
+++ b/Trie/01.Implement_Trie.md
@@ -14,7 +14,7 @@ Implement the Trie class:
 
 ### Solution
 
-In the introduction section, we already briefly introduced one of implementation of Trie. In this question, a string only contains lowercase English word. We can reduce the children array to 26. For some cases, a map might help reduce some space but in general array works fine. We would save null to those child without an associated node and differentiate a prefix and a word with ending flag. 
+In the introduction section, we already briefly introduced one of implementation of Trie. In this question, a string only contains lowercase English word. We can reduce the children array to 26. For some cases, a map might help reduce some space but in general array works fine. We would save null to those children without an associated node and differentiate a prefix and a word with ending flag. 
 
 ![trie_imp](image\trie_imp.png)
 
