--- a/Trie/02.Word_Search_II.md
+++ b/Trie/02.Word_Search_II.md
@@ -12,11 +12,11 @@ Each word must be constructed from letters of sequentially adjacent cells, where
 
 ### Solution
 
-Any character on the board could be start of a word. As long as the same entry not being used more than once. We have a valid path to construct a word. To move on the board without repeating, we would use BFS and DFS. However, It is hard to track the parent with BFS. So DFS is a option. Let us try to start a word at a entry and explore all the valid paths to see if we can find a word. Of course, we need to avoid visiting the same entry twice. This could be a set but in java, the hash code of an array is its address. We can also set the character on board to a special character to avoid visiting it again. And we need to restore it after explore all the sub paths. So this is actually a backtrack.
+Any character on the board could be start of a word. As long as the same entry not being used more than once. We have a valid path to construct a word. To move on the board without repeating, we would use BFS and DFS. However, It is hard to track the parent with BFS. So DFS is a option. Let us try to start a word at a entry and explore all the valid paths to see if we can find a word. Of course, we need to avoid visiting the same entry twice. This could be a set but in java, the hash code of an array is its address. We can also set the character on board to a special character to avoid visiting it again. And we need to restore it after explore all the sub paths. So this is actually a backtracking solution.
 
 The above solution works correctly. But it would perform bad. To enter each entry, we need to compare the string composed by all the characters up to now on the current path and the list of string. Although we can use Set to improve looking up in the list. That is still costly. Also maintain the String on the paths are also costly. And the final result should not contain duplicate words. We also need to remove string from the set after it being found on the board.
 
-To improve this, we can use Trie or prefix tree. First, we can hold current node instead of a StringBuilder to track the composed string on the board. Also, once a prefix is not in the Trie. We can just stop searching. While the set cannot tell only with prefix. You may tell the maximum level dfs or backtrack could reach, i.e. the max length among all words. However, Trie would tell more, for example, you might have the word with maximum length 20 and no word startsWith abc. Then with Trie, once we have encounter "abc". We know it should be stopped but for set, we cannot tell and we would tell unless the length beyond 20. By introducing Trie, we could save a lot of time.
+To improve this, we can use Trie or prefix tree. First, we can hold current node instead of a StringBuilder to track the composed string on the board. Also, once a prefix is not in the Trie. We can just stop searching. While the set cannot tell only with prefix. You may tell the maximum level dfs or backtrack could reach, i.e. the max length among all words. However, Trie would tell more, for example, you might have the word with maximum length 20 and no word startsWith abc. Then with Trie, once we have encountered "abc". We know it should be stopped but for set, we cannot tell unless the length beyond 20. By introducing Trie, we could save a lot of time.
 
 ```java
     private static final int[][] DIRS = {{1,0},{-1,0},{0,1},{0,-1}};
@@ -115,9 +115,9 @@ Time complexity:
 
 1. inserting to the Trie O(wk) where w is the max length of words in the list and k is the length of the list. 
 
-2. nested loop O(nm) where n is the number of row and m is the number of column. Within each iteration, a backtrack is performed, each time we have 4 directions -> 4^w^. besides the first entry. We actually only has 3 options because we cannot go back. that give us 4 * 3 ^w-1^ O(nm4 * 3^w-1^) ->  O(nm * 3^w-1^) 
+2. nested loop O(nm) where n is the number of row and m is the number of column. Within each iteration, a backtracking is performed, each time we have 4 directions -> 4<sup>w</sup>, besides the first entry. We actually only has 3 options because we cannot go back. that give us 4 * 3<sup>w-1</sup> O(nm4 * 3<sup>w-1</sup>) ->  O(nm * 3<sup>w-1</sup>) 
 
-   In total, it would be O(nm * 3^w-1^) 
+   In total, it would be O(nm * 3<sup>w-1</sup>) 
 
 Space complexity: 
 
