--- a/Union_Find/01.Number_of_Provinces.md
+++ b/Union_Find/01.Number_of_Provinces.md
@@ -4,9 +4,9 @@
 
 There are n cities. Some of them are connected, while some are not. If city a is connected directly with city b, and city b is connected directly with city c, then city a is connected indirectly with city c.
 
-A province is a group of directly or indirectly connected cities and no other cities outside of the group.
+A province is a group of directly or indirectly connected cities and no other cities out of the group.
 
-You are given an n*n matrix isConnected where isConnected\[i\]\[j\] =1 if the i^th^ city and the j^th^are directly connected, and isConnected\[i\]\[j\] =0 otherwise.
+You are given an n*n matrix isConnected where isConnected[i][j] =1 if the i^th^ city and the j^th^are directly connected, and isConnected[i][j] =0 otherwise.
 
 Return the total number of connected.
 
@@ -75,7 +75,7 @@ Return the total number of connected.
     }
 ```
 
-Time complexity: The nested loop n^2^. Times the time complexity of union. This is not easy to estimate because the find would be a recursive function and we do path compression each time. If there is no path compression, because the way ranks worked. We would have a tree like structure. That given logn for lookup.
+Time complexity: The nested loop n<sup>2</sup>. Times the time complexity of union. This is not easy to estimate because the find would be a recursive function and we do path compression each time. If there is no path compression, because the way ranks worked. We would have a tree like structure. That given logn for lookup.
 
 Space complexity:  parent array and ranks array O(n)
 
@@ -108,6 +108,6 @@ This question can also be solved by DFS. we can have a boolean array. Each call 
 
 ```
 
-Time complexity: dfs traverse all cells O(n^2^)
+Time complexity: dfs traverse all cells O(n<sup>2</sup>)
 
 Space complexity: the max depth O(n) (all cities) boolean array is also O(n) -> O(n)
