--- a/Union_Find/03.Surrounded_Regions.md
+++ b/Union_Find/03.Surrounded_Regions.md
@@ -12,7 +12,7 @@ A region is captured by flipping all 'O's into 'X's in that surround region.
 
 From the description and the example, we can find we would keep the 'O' when it is on the boarder or connect to a 'O' boarder through zero or more 'O' in between. Other 'O's would be captured by 'X's and they should be flipping to 'X'. 
 
-To be honest, the DFS solution would be much easy to figure out. We would talk that later. To resolve this by UnionFind, we find the connection. The goal is to find 'O' and the boarder and 'O' can be connected to an 'O' on the boarder through 'O'(s). The group is clear. But how to do check if they are connected to a 'O' on the boarder in later phase when we flip?  The solution here is to add a special entry in the parent array. That would representing the board. And all 'O' on the boarder would point its parent to that special value. Then, in the later phases, we can just test if an 'O' is in the same group of the special entry. If yes, we do not flip. Otherwise, we flip.  We can just add an additional entry in the last to be the special entry. The following example set a large rank to the special value so that all it would be the parent for all 'O' in boarder group. But please be aware your data size in case that would be overflow. Here the max is 200 * 200. If we double it that would be far less than Integer.MAX_VALUE
+To be honest, the DFS solution would be much easy to figure out. We would talk that later. To resolve this by UnionFind, we find the connection. The goal is to find 'O' and the boarder and 'O' can be connected to an 'O' on the boarder through 'O'(s). The group is clear. But how to do check if they are connected to a 'O' on the boarder in later phase when we flip?  The solution here is to add a special entry in the parent array. That would represent the board. And all 'O' on the boarder would point its parent to that special value. Then, in the latter phases, we can just test if an 'O' is in the same group of the special entry. If yes, we do not flip. Otherwise, we flip.  We can just add an entry in the last to be the special entry. The following example set a large rank to the special value so that all it would be the parent for all 'O' in boarder group. But please be aware your data size in case that would be overflow. Here the max is 200 * 200. If we double it that would be far less than Integer.MAX_VALUE
 
 ```java
     private final int[][] DIRS = {{1,0},{-1,0},{0,1},{0,-1}};
