--- a/Union_Find/02.Number_of_Islands.md
+++ b/Union_Find/02.Number_of_Islands.md
@@ -8,7 +8,7 @@ An **island** is surrounded by water and is formed by connecting adjacent lands 
 
 ### Solution
 
-This question would group adjacent '1's horizontally and vertically as one group or join and merge an existing groups of those 1's into one group. We can use Union Find here. Similar to the "Number of Provinces", every time two groups joins we would decrease the number of groups by 1. The difference here is that we would only count 1's as individual group in the beginning. Of course, one can join all 1's first and count those x == find(x) in another iteration to get the answer.  But if you want to count one iteration, we can just return 0 and 1 from the union function to tell if two groups are join. And minus the it from number of groups along the road. Although at a given point, this might be negative but after the whole process, this would be the correct answer.
+This question would group adjacent '1's horizontally and vertically as one group or join and merge an existing groups of those 1's into one group. We can use Union Find here. Similar to the "Number of Provinces", every time two groups joins we would decrease the number of groups by 1. The difference here is that we would only count 1's as individual group in the beginning. Of course, one can join all 1's first and count those x == find(x) in another iteration to get the answer.  But if you want to count one iteration, we can just return 0 and 1 from the union function to tell if two groups are join. And minus it from number of groups along the road. Although at a given point, this might be negative but after the whole process, this would be the correct answer.
 
 ```java
     private final int[][] DIRS = {{1,0},{-1,0},{0,1},{0,-1}};
@@ -79,9 +79,9 @@ This question would group adjacent '1's horizontally and vertically as one group
     }
 ```
 
-Time complexity: 4mn\*2\*time of find(x) O(mn\*time of find(x)) . where m and n are # of rows and # columns respectively  The time of find(x) with path compression is the reverse function of Ackermann function with respect to total number of element. That is usually considered almost constant 
+Time complexity: 4mn * 2 * time of find(x) O(mn * time of find(x)) . where m and n are # of rows and # columns respectively  The time of find(x) with path compression is the reverse function of Ackermann function with respect to total number of element. That is usually considered almost constant 
 
 Space complexity parent array and rank array O(m*n)
 
-Another solution is DFS. This has been describe in the [DFS section](..\DFS_BFS\04.Number_of_Islands__Minesweeper.md).
+Another solution is DFS. This has been described in the [DFS section](..\DFS_BFS\04.Number_of_Islands__Minesweeper.md).
 
